# generative-gif-circles

./: Diagram Experiments 20180921.ipynb
gifs/circles/: LICENSE  README.md  circles.cabal
gifs/circles/src/: Circles2.hs  Main.hs
