name:                circles
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://git.alech.de/alech/generative-gif-circles#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Klink
maintainer:          git@alech.de
copyright:           2018 Alexander Klink
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable circles
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                    ,  diagrams
                    ,  diagrams-lib
                    ,  colour
                    ,  diagrams-rasterific

executable circles2
  hs-source-dirs:      src
  main-is:             Circles2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                    ,  diagrams
                    ,  diagrams-lib
                    ,  colour
                    ,  diagrams-rasterific
